--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,3 @@
-
 workflows:
   android-release:
     name: Android Release Build 2026
@@ -69,9 +68,12 @@ workflows:
           }
           EOF
 
-          # 3. Generate settings.gradle
+          # 3. Create settings.gradle with Capacitor linkages
           cat <<EOF > android/settings.gradle
           include ':app'
+          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
+          include ':capacitor-android'
+          apply from: 'capacitor.settings.gradle'
           EOF
 
           # 4. Generate app-level build.gradle
