build: Correct Capacitor Android settings.gradle linkage
Ensures that the Capacitor Android module is correctly linked in the `settings.gradle` file, resolving potential build issues with the Android platform.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -68,11 +68,11 @@ workflows:
           }
           EOF
 
-          # 3. Create settings.gradle with Capacitor linkages
+          # 3.5. Correct settings.gradle linkage
           cat <<EOF > android/settings.gradle
           include ':app'
-          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
           include ':capacitor-android'
+          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
           apply from: 'capacitor.settings.gradle'
           EOF
 
