--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,3 +1,4 @@
+
 workflows:
   android-release:
     name: Android Release Build 2026
@@ -27,7 +28,30 @@ workflows:
         script: |
           npx cap add android || true
           
-          # 1. Generate root variables.gradle
+          # 1. Inject google-services.json (Validated Data)
+          mkdir -p android/app
+          cat <<EOF > android/app/google-services.json
+          {
+            "project_info": {
+              "project_number": "360575943200",
+              "project_id": "gen-lang-client-0483274603",
+              "storage_bucket": "gen-lang-client-0483274603.firebasestorage.app"
+            },
+            "client": [
+              {
+                "client_info": {
+                  "mobilesdk_app_id": "1:360575943200:android:9d2fad05b843bffa4d3245",
+                  "android_client_info": { "package_name": "com.mastergrowbot.app" }
+                },
+                "api_key": [ { "current_key": "AIzaSyBRIK10W7TOBUqxe9YjEXlGVkk0V43Nt9o" } ],
+                "services": { "appinvite_service": { "other_platform_oauth_client": [ { "client_id": "360575943200-mq17ju3a221117rgu96v7as1b4o49rq8.apps.googleusercontent.com", "client_type": 3 } ] } }
+              }
+            ],
+            "configuration_version": "1"
+          }
+          EOF
+
+          # 2. Generate root variables.gradle
           cat <<EOF > android/variables.gradle
           ext {
               minSdkVersion = 22
@@ -45,7 +69,7 @@ workflows:
           }
           EOF
 
-          # 2. Generate root build.gradle
+          # 3. Generate root build.gradle
           cat <<EOF > android/build.gradle
           buildscript {
               repositories {
@@ -54,7 +78,7 @@ workflows:
               }
               dependencies {
                   classpath 'com.android.tools.build:gradle:8.2.1'
-                  classpath 'com.google.gms:google-services:4.4.0'
+                  classpath 'com.google.gms:google-services:4.4.2'
               }
           }
           allprojects {
@@ -68,7 +92,7 @@ workflows:
           }
           EOF
 
-          # 3.5. Correct settings.gradle linkage
+          # 4. Correct settings.gradle linkage
           cat <<EOF > android/settings.gradle
           include ':app'
           include ':capacitor-android'
@@ -76,7 +100,7 @@ workflows:
           apply from: 'capacitor.settings.gradle'
           EOF
 
-          # 4. Generate app-level build.gradle
+          # 5. Generate app-level build.gradle
           cat <<EOF > android/app/build.gradle
           apply plugin: 'com.android.application'
           apply plugin: 'com.google.gms.google-services'
