--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,7 +26,10 @@ workflows:
           npm run build
       - name: Capacitor Sync & Self-Healing Config
         script: |
-          # 1. Inject Validated google-services.json (Using Key AIzaSyBRIK...)
+          # 1. Force Create Android Project Structure
+          npx cap add android || true
+          
+          # 2. Inject Validated google-services.json
           mkdir -p android/app
           cat <<EOF > android/app/google-services.json
           {
@@ -40,7 +43,24 @@ workflows:
           }
           EOF
           
-          # 2. Generate root build.gradle (FORCING BOUNCY CASTLE FIX)
+          # 3. Inject gradle.properties for CI
+          cat <<EOF >> android/gradle.properties
+          SUPABASE_URL=$VITE_SUPABASE_URL
+          SUPABASE_KEY=$VITE_SUPABASE_ANON_KEY
+          GEMINI_API_KEY=$VITE_GEMINI_API_KEY
+          EOF
+
+          # 4. Correct settings.gradle (Including Cordova bridge for RevenueCat)
+          cat <<EOF > android/settings.gradle
+          include ':app'
+          include ':capacitor-android'
+          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
+          include ':capacitor-cordova-android-plugins'
+          project(':capacitor-cordova-android-plugins').projectDir = new File('capacitor-cordova-android-plugins')
+          apply from: 'capacitor.settings.gradle'
+          EOF
+          
+          # 5. Generate root build.gradle (Bouncy Castle Stability Fix)
           cat <<EOF > android/build.gradle
           buildscript {
               repositories { google(); mavenCentral() }
@@ -59,39 +79,8 @@ workflows:
           }
           task clean(type: Delete) { delete rootProject.buildDir }
           EOF
-          
-          # 3. Correct settings.gradle linkage (Fixing missing Cordova and Bridge paths)
-          cat <<EOF > android/settings.gradle
-          include ':app'
-          include ':capacitor-android'
-          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
-          include ':capacitor-cordova-android-plugins'
-          project(':capacitor-cordova-android-plugins').projectDir = new File('capacitor-cordova-android-plugins')
-          apply from: 'capacitor.settings.gradle'
-          EOF
-          
-          # 4. Final Sync
-          npx cap sync android
 
-          # 5. Inject Variables
-          cat <<EOF > android/variables.gradle
-          ext {
-              minSdkVersion = 22
-              compileSdkVersion = 34
-              targetSdkVersion = 34
-              androidxActivityVersion = '1.8.0'
-              androidxAppCompatVersion = '1.6.1'
-              androidxCoordinatorLayoutVersion = '1.2.0'
-              androidxCoreVersion = '1.12.0'
-              androidxFragmentVersion = '1.6.2'
-              junitVersion = '4.13.2'
-              androidxJunitVersion = '1.1.5'
-              androidxEspressoCoreVersion = '3.5.1'
-              cordovaAndroidVersion = '10.1.1'
-          }
-          EOF
-
-          # 6. Inject App Build Gradle
+          # 6. Inject App build.gradle (Mandatory Capacitor 6 Namespace)
           cat <<EOF > android/app/build.gradle
           apply plugin: 'com.android.application'
           apply plugin: 'com.google.gms.google-services'
@@ -115,12 +104,6 @@ workflows:
               }
           }
 
-          repositories {
-              flatDir {
-                  dirs 'libs'
-              }
-          }
-
           dependencies {
               implementation fileTree(dir: 'libs', include: ['*.jar'])
               implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -132,6 +115,8 @@ workflows:
 
           apply from: 'capacitor.build.gradle'
           EOF
+          
+          npx cap sync android
 
       - name: Build Android App Bundle
         script: |
